[package]
name = "kryon-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Use workspace dependencies
kryon-compiler.workspace = true
kryon-core.workspace = true
kryon-layout.workspace = true
kryon-render.workspace = true
kryon-runtime.workspace = true
kryon-shared.workspace = true

# Test dependencies
insta.workspace = true
tempfile.workspace = true
assert_fs.workspace = true
predicates.workspace = true
criterion.workspace = true
proptest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
colored.workspace = true
log.workspace = true
env_logger.workspace = true
futures.workspace = true
assert_matches.workspace = true
pretty_assertions.workspace = true
sha2.workspace = true
rand.workspace = true
glam.workspace = true
image.workspace = true
indexmap.workspace = true
uuid.workspace = true
walkdir.workspace = true
regex.workspace = true
notify.workspace = true
toml.workspace = true
clap.workspace = true

[[test]]
name = "compiler"
path = "compiler/mod.rs"

[[test]]
name = "renderer"
path = "renderer/mod.rs"

[[test]]
name = "integration"
path = "integration/mod.rs"

[[bench]]
name = "benchmarks"
harness = false