[build-system]
requires = ["setuptools>=61.0", "cffi>=1.15.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kryon"
version = "0.1.0"
description = "Python bindings for Kryon UI Framework"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Kryon Labs", email = "info@kryonlabs.com"}
]
keywords = ["ui", "framework", "declarative", "cross-platform"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["cffi>=1.15.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "mypy>=1.0", "isort>=5.0"]

[project.urls]
Homepage = "https://github.com/kryonlabs/kryon"
Documentation = "https://docs.kryonlabs.com"
Repository = "https://github.com/kryonlabs/kryon"

[tool.setuptools]
packages = ["kryon", "kryon.core", "kryon.dsl", "kryon.codegen", "kryon.parser", "kryon.utils"]

[tool.black]
line-length = 100
target-version = ["py37", "py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
