[package]
name = "kryon-html"
version = "0.1.0"
edition = "2021"
authors = ["Kryon Labs"]
description = "HTML/CSS backend for Kryon renderer"
license = "0BSD"

[dependencies]
# Core Kryon dependencies
kryon-core = { path = "../kryon-core" }
kryon-render = { path = "../kryon-render" }
kryon-layout = { path = "../kryon-layout" }

# Web and HTML generation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
html-escape = "0.2"

# Math and utilities
glam = "0.25"
anyhow = "1.0"
thiserror = "1.0"

# Optional server dependencies
tokio = { version = "1.0", features = ["full"], optional = true }
warp = { version = "0.3", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.4", features = ["fs"], optional = true }

# Optional build dependencies
minify-html = { version = "0.15", optional = true }
lightningcss = { version = "1.0.0-alpha.67", optional = true }

[features]
default = []
server = ["tokio", "warp", "tower", "tower-http"]
minify = ["minify-html", "lightningcss"]
all = ["server", "minify"]