[package]
name = "kryon-shared"
version = "0.1.0"
edition = "2021"
authors = ["Kryon Labs"]
description = "Shared types and utilities for Kryon compiler and renderer"
license = "0BSD"

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }
bitflags = { workspace = true }

# Optional features
byteorder = { workspace = true }

[features]
default = []
serde_support = []

# Widget features - optional built-in widgets
basic-widgets = []
extended-widgets = ["dropdown", "data-grid", "date-picker", "rich-text"]
dropdown = []
data-grid = []
date-picker = []
rich-text = []
color-picker = []
file-upload = []
number-input = []
range-slider = []
all-widgets = ["extended-widgets", "color-picker", "file-upload", "number-input", "range-slider"]